--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <h2>I'm a Web Developer</h2> 
   <hr/>
    
-  <h3><a href="./assets/images/Movie ranking.png">Movie Ranking Project</a></h3>
-  <img src="./assets/images/Movie ranking.png" height="200" alt="movie ranking project preview"/>
-  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  <h3><a href="Movie ranking.png">Movie Ranking Project</a></h3>
+  <img src="Movie ranking.png" height="200" alt="movie ranking project preview"/>
+  <h3><a href="birthday-invite.html">Birthday Invite Project</a></h3>
+  <img src="birthday-invite.png" height="200" alt="birthday invite project preview"/>
   <hr />
-  <a href="./public/about.html">About Me</a>
-  <a href="./public/contact.html">Contact Me</a> 
+  <a href="about.html">About Me</a>
+  <a href="contact.html">Contact Me</a> 
 
   
  </body>
